something is doomed with responsive lol, but gap fixed

--- a/sona/src/app/globals.css
+++ b/sona/src/app/globals.css
@@ -51,10 +51,10 @@ html, body {
     @apply text-xs sm:text-xs md:text-xs lg:text-sm xl:text-base drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.5)] uppercase font-work-sans text-white break-words overflow-hidden whitespace-pre-wrap;
   } 
   .ability-breadcrumb-text {
-    @apply text-xl sm:text-xl md:text-2xl lg:text-2xl xl:text-3xl;
+    @apply text-xl sm:text-xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-3xl 3xl:text-3xl;
   }
   .ability-description-text{
-    @apply text-base sm:text-base md:text-lg lg:text-xl xl:text-xl;
+    @apply text-xs sm:text-sm md:text-base lg:text-lg xl:text-xl 2xl:text-xl 3xl:text-xl;
   }
 }
 
